manifests/overseerr/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: overseerr
  namespace: jovian-prod
  labels:
    app: overseerr
    service: media-backend
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: overseerr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: overseerr
    spec:
      nodeSelector:
        connection: standard
      containers:
      - name: overseerr
        image: ghcr.io/seerr-team/seerr:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5055
          name: overseerr-http
          protocol: TCP   
        volumeMounts:
        - name: config
          mountPath: /app/config
        - name: nfs-media
          mountPath: /nfs-media
          readOnly: true
        resources:
          requests:
            memory: "400Mi"
            cpu: "250m"
          limits:
            memory: "600Mi"
            cpu: "1000m"
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: overseerr-pvc
          readOnly: false
      - name: nfs-media
        persistentVolumeClaim:
          claimName: overseerr-smb-media-pvc
          readOnly: true
