manifests/overseerr/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: overseerr-service
  namespace: jovian-prod
spec:
  selector:
    app: overseerr
  ports:
    - port: 5055
      targetPort: overseerr-http
      protocol: TCP
      name: overseerr-http
